Nangband ChangeLog - If it's not broken, let's fix it until it is.
==================

2002-06-12
----------
- Merged the experimental branch into the trunk. (takkaria)
- Cleaned out hundreds of warnings all over the source. (takkaria)

2002-06-04
----------
(experimental branch)
- New running code is working. (takkaria)

(normal branch)
- Changed some file headers.  Nangband is now completely GPL'd.
  (takkaria)

2002-06-02
----------
- Updated to the latest [v] CVS; this brings some niceties.
  (takkaria)
- [v] also brought a nasty; in character dumps, objects' abilities
  were shown on-screen rather than in the file - fixed. (takkaria)
- Fixed a typo in thanks.txt. (takkaria)
- Got autoconf & friends working again. (takkaria)
- Added weak hits, from Parodyingband. (parody)

2002-05-26
----------
- New RISC OS resources files for lua; fixed using some quick hacks.
  (ajps)
- A new set of RISC OS resources, with many changes and now looking
  much more like Angband source code. (takkaria)

2002-05-24
----------
- New randart code is in!  Savefile compatibility is lost, sadly.
  (takkaria)

2002-05-18
----------
- Moved divisions after multiplications in resist_player_current in
  two places, so that precisions aren't lost. (pelpel)

2002-05-12
----------
- Made timed resists decrement over time; quite cool code, don't know
  how to explain it clearly, really. (takkaria)
- Made the "display version" command show the splash screen. (takkaria)
- Fixed array indices into k_info in object.lua -- C's k_info[0] corresponds
  to k_info[1] in Lua. (pelpel)
- Big screen support for GCU. As nangband -? says, it can be activated
  by nangband -- -b. Curses implementations react differently to SIGWINCH
  and I have no idea how to implement portable resizing... (pelpel)
- Imported lua bit operator implementation from Vanilla 3.0.0 CVS,
  which compiles on lcc, doesn't offend some cpp's with empty arguments
  and is more readable. (pelpel)