@@ -16,3 +16,4 @@ anindent
 anmerge
 stamp-h
 trivial
+tolua
